--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://adritian-demo.vercel.app/"
+baseURL = "https://izzet.kirici.io/"
 languageCode = "en-us"
 theme = "adritian-free-hugo-theme"
 
